--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/misc.xml
-/.idea/vcs.xml
-/.idea/workspace.xml
+/.idea/
 
-.env
+/.env
+/.venv/
