--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ sqlalchemy = "^2.0.25"
 psycopg2-binary = "^2.9.9"
 sqlalchemy-utils = "^0.41.1"
 alembic = "^1.13.1"
+python-dotenv = "^1.0.1"
+pathlib = "^1.0.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-multipart = "^0.0.6"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
